# node-android

./: .gitignore  README.md  node-android-build-control.sh
example/android-nextjs-shell/: README.md  build.gradle
example/android-nextjs-shell/app/: build.gradle  proguard-rules.pro
example/android-nextjs-shell/app/src/main/: AndroidManifest.xml
example/android-nextjs-shell/app/src/main/assets/: bootstrap-loading.html
example/android-nextjs-shell/app/src/main/cpp/: CMakeLists.txt  node_bridge.cpp
example/android-nextjs-shell/app/src/main/kotlin/com/viocha/nextshell/: MainActivity.kt
example/android-nextjs-shell/app/src/main/res/values/: strings.xml  themes.xml
example/android-nextjs-shell/next-app/: .npmrc  package.json  pnpm-lock.yaml
example/android-nextjs-shell/next-app/app/: globals.css  layout.tsx  page.tsx  tasks-client.tsx
example/android-nextjs-shell/next-app/app/api/health/: route.ts
example/android-nextjs-shell/next-app/app/api/tasks/: route.ts
example/android-nextjs-shell/next-app/lib/: store.ts
example/android-verify/: README.md  settings.gradle
example/android-verify/app/: build.gradle  proguard-rules.pro
example/android-verify/app/src/main/: AndroidManifest.xml
example/android-verify/app/src/main/cpp/: CMakeLists.txt  node_bridge.cpp
example/android-verify/app/src/main/res/values/: strings.xml  themes.xml
scripts/env/: setup-node-android-build-env.sh
scripts/examples/: build-android-nextjs-shell-apk.sh  build-android-verify-apk.sh  build-nextjs-assets.sh
scripts/release/: release-github.sh
(+11 files in other folders)
